{
  "version": 4,
  "terraform_version": "1.0.3",
  "serial": 213,
  "lineage": "003146e3-e92b-84cd-4a6b-9579d4306648",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.76.44.216",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2021-07-27T10:36:18.376-07:00",
            "id": "projects/graphic-chain-321011/regions/europe-west1/addresses/vm-public-address",
            "name": "vm-public-address",
            "network_tier": "PREMIUM",
            "project": "graphic-chain-321011",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/graphic-chain-321011/regions/europe-west1/addresses/vm-public-address"
          },
          "dependencies": [
            "google_compute_firewall.firewall"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-07-27T10:36:10.441-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/graphic-chain-321011/global/firewalls/gritfy-firewall-externalssh",
            "name": "gritfy-firewall-externalssh",
            "network": "https://www.googleapis.com/compute/v1/projects/graphic-chain-321011/global/networks/default",
            "priority": 1000,
            "project": "graphic-chain-321011",
            "self_link": "https://www.googleapis.com/compute/v1/projects/graphic-chain-321011/global/firewalls/gritfy-firewall-externalssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "externalssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "http-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-07-27T10:36:10.433-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/graphic-chain-321011/global/firewalls/default-allow-http",
            "name": "default-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/graphic-chain-321011/global/networks/default",
            "priority": 1000,
            "project": "graphic-chain-321011",
            "self_link": "https://www.googleapis.com/compute/v1/projects/graphic-chain-321011/global/firewalls/default-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "https-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-07-27T10:36:10.437-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/graphic-chain-321011/global/firewalls/default-allow-https",
            "name": "default-allow-https",
            "network": "https://www.googleapis.com/compute/v1/projects/graphic-chain-321011/global/networks/default",
            "priority": 1000,
            "project": "graphic-chain-321011",
            "self_link": "https://www.googleapis.com/compute/v1/projects/graphic-chain-321011/global/firewalls/default-allow-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "https-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20210720",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/graphic-chain-321011/zones/europe-west1-c/disks/terraform-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/graphic-chain-321011/zones/europe-west1-c/instances/terraform-instance",
            "instance_id": "3181581857626913528",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-small",
            "metadata": {
              "ssh-keys": "lukashuk:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQCpJYo03E++XjTT3F8wq7Zp+/a++s5nBxN7oh/3JK0yFGn6OODnWGA9XVqrYSM+q+azkYso8lADntObkddxi5/cl9qjp4N3szkj5fZxCTP+yzGUw7UYItzmzWKODnI0ZOHXV/35bj5jwKQfLwfolLUSP5olaRkhnT29rKKy8lrQ9xL8fCrpPJYg7nI8k9bP9sEdseYVVnQd3f8IVLK2agd2adcuvXp9XywIkuE0swmmWB+m0i3aQG0/B5Jk5+lnFmSyXNdnJDE6aJ2BmjpAqXgjmYTvIZETKjVRiLRBocub4NiCkPQa4uME5cbNEtGkT2M0bXIdhS4Nlklt/O6icrrroS1tKsDqvtpK+QQL8o6M9edLUM//cmB1EGD7nzRNlTd/0C9mH8gmQcqjSCAlm4PRF45MPWR8W6hNyjFt9W/e [...]
            },
            "metadata_fingerprint": "-DN0RQcYpCg=",
            "metadata_startup_script": "#!/bin/bash\nsudo apt update -y\nsudo apt install apache2 -y\n",
            "name": "terraform-instance",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.76.44.216",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/graphic-chain-321011/global/networks/default",
                "network_ip": "10.132.0.18",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/graphic-chain-321011/regions/europe-west1/subnetworks/default",
                "subnetwork_project": "graphic-chain-321011"
              }
            ],
            "project": "graphic-chain-321011",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/graphic-chain-321011/zones/europe-west1-c/instances/terraform-instance",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "externalssh",
              "http-server",
              "https-server"
            ],
            "tags_fingerprint": "ZYYRvc7Twpc=",
            "zone": "europe-west1-c"
          },
          "dependencies": [
            "google_compute_address.static",
            "google_compute_firewall.firewall"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "id": "projects/graphic-chain-321011/global/networks/terraform-network",
            "name": "terraform-network",
            "project": "graphic-chain-321011",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/graphic-chain-321011/global/networks/terraform-network"
          }
        }
      ]
    }
  ]
}